# ewos

./: .gitignore  Cargo.toml  README.md  build.rs  kernel.ld  linker.ld  makefile  rust-toolchain.toml
.cargo/: config
c/: main.c  makefile
src/: bsp.rs  cpu.rs  lib.rs  main.rs  panic_wait.rs  print.rs  uart.rs
src/arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: rpi4.rs  uart.rs
src/bsp/rpi4/: console.rs  uart.rs
src/cpu/: boot.rs
