[package]
name = "ewos"
version = "0.1.0"
authors = ["juzi"]
edition = "2021"

##The lto setting controls the -C lto flag which controls LLVM's link time optimizations. 
##LTO can produce better optimized code, using whole-program analysis, at the cost of longer linking time.
[profile.release]
lto = true

[features]
default = []
bsp_rpi4 = []


[[bin]]
name = "kernel"
path = "src/main.rs"


[dependencies]
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.x.x" }